--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^10.0.0",
     "express.js": "^1.0.0",
     "nodemailer": "^6.6.3",
